[gd_scene load_steps=30 format=2]

[ext_resource path="res://assets/imp-Sheet.png" type="Texture" id=1]
[ext_resource path="res://src/enemies/Imp.gd" type="Script" id=2]
[ext_resource path="res://src/modules/KnockbackModule.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/modules/BloodParticlesModule.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/modules/SeekPlayerModule.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/modules/PathFindingModule.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/modules/SideEvadeModule.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/modules/ShootingModule.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/bullets/DemonBullet.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/effects/ExplosionParticle.tscn" type="PackedScene" id=10]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 24, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 72, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 24, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 48, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 72, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 0, 48, 24, 24 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 24, 48, 24, 24 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 48, 48, 24, 24 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 72, 48, 24, 24 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 0, 72, 24, 24 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 24, 72, 24, 24 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 48, 72, 24, 24 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 72, 72, 24, 24 )

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 8.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "die",
"speed": 5.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "bite",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=18]
radius = 9.21954

[sub_resource type="Animation" id=19]
resource_name = "die"
length = 2.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "die" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.65, 0.8, 1, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AnimatedSprite:rotation_degrees")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.15, 0.35, 0.6, 0.85, 1.15, 1.45, 1.7, 1.85, 2, 2.15, 2.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 15.0, 0.0, -15.0, 0.0, 15.0, -15.0, 15.0, -15.0, 15.0, -15.0, 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ExplosionParticle:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.85, 1.45, 1.95 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, true, true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath(".:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.95, 1.25, 1.5, 2.2, 2.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.388235, 0.780392, 0.301961, 1 ), Color( 0.388235, 0.780392, 0.301961, 0.784314 ), Color( 0.388235, 0.780392, 0.301961, 1 ), Color( 0.388235, 0.780392, 0.301961, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Imp" type="KinematicBody2D" groups=[
"enemy",
]]
collision_mask = 3
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 17 )
animation = "die"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, 2 )
shape = SubResource( 18 )

[node name="KnockbackModule" parent="." instance=ExtResource( 3 )]
body_path = NodePath("..")

[node name="BloodParticlesModule" parent="." instance=ExtResource( 4 )]
blood_color = Color( 0.243137, 0.537255, 0.282353, 1 )

[node name="SeekPlayerModule" parent="." instance=ExtResource( 5 )]

[node name="PathFindingModule" parent="." instance=ExtResource( 6 )]
body_path = NodePath("..")

[node name="DelayTimer" type="Timer" parent="PathFindingModule"]
wait_time = 0.3

[node name="SideEvadeModule" parent="." instance=ExtResource( 7 )]
body_path = NodePath("..")

[node name="ShootingModule" parent="." instance=ExtResource( 8 )]
bullet = ExtResource( 9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/die = SubResource( 19 )

[node name="ExplosionParticle" parent="." instance=ExtResource( 10 )]
color = Color( 0.388235, 0.780392, 0.301961, 1 )
[connection signal="start_seeing_player" from="SeekPlayerModule" to="." method="_on_SeekPlayerModule_start_seeing_player"]
[connection signal="stop_seeing_player" from="SeekPlayerModule" to="." method="_on_SeekPlayerModule_stop_seeing_player"]
[connection signal="reached" from="PathFindingModule" to="." method="_on_PathFindingModule_reached"]
[connection signal="timeout" from="PathFindingModule/DelayTimer" to="." method="_on_DelayTimer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
